--- a/app/src/main/res/layout-land/activity_control_inventory_page.xml
+++ b/app/src/main/res/layout-land/activity_control_inventory_page.xml
@@ -12,10 +12,10 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -89,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:text="메뉴관리"
+                android:text="재고 관리"
                 android:textColor="#FF5555"
                 android:textSize="30dp"
                 android:textStyle="bold"
@@ -118,9 +118,10 @@
                 android:layout_width="900dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="100dp"
+                android:padding="8dp"
                 android:stretchColumns="*"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -134,48 +135,55 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_margin="1dp"
                         android:gravity="center"
-                        android:text="메뉴이름"
+                        android:text="이름"
                         android:textSize="24dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
+                        android:layout_margin="1dp"
                         android:gravity="center"
-                        android:text="판매가격"
+                        android:text="가격"
                         android:textSize="24dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_margin="1dp"
                         android:gravity="center"
-                        android:text="카테고리 분류"
+                        android:text="잔여수량"
                         android:textSize="24dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_margin="1dp"
                         android:gravity="center"
-                        android:text="상태"
+                        android:text="거래처"
                         android:textSize="24dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_margin="1dp"
                         android:gravity="center"
-                        android:text="메뉴 사진"
+                        android:text="거래처 연락처"
                         android:textSize="24dp" />
                 </TableRow>
 
@@ -193,6 +201,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:text="1"
                         android:textSize="24dp" />
@@ -201,6 +210,7 @@
                         android:id="@+id/textView48"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -208,6 +218,7 @@
                         android:id="@+id/textView49"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -215,6 +226,7 @@
                         android:id="@+id/textView50"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -222,6 +234,14 @@
                         android:id="@+id/textView51"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:gravity="center"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -240,6 +260,7 @@
                         android:id="@+id/textView53"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:text="2"
                         android:textSize="24dp" />
@@ -248,6 +269,7 @@
                         android:id="@+id/textView54"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -255,6 +277,7 @@
                         android:id="@+id/textView55"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -262,6 +285,7 @@
                         android:id="@+id/textView56"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -269,6 +293,14 @@
                         android:id="@+id/textView57"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:gravity="center"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -287,6 +319,7 @@
                         android:id="@+id/textView60"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:text="3"
                         android:textSize="24dp" />
@@ -295,6 +328,7 @@
                         android:id="@+id/textView61"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -302,6 +336,7 @@
                         android:id="@+id/textView62"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -309,6 +344,7 @@
                         android:id="@+id/textView63"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -316,6 +352,15 @@
                         android:id="@+id/textView64"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:gravity="center"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:id="@+id/textView51"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -323,29 +368,6 @@
 
 
             </TableLayout>
-
-            <TextView
-                android:id="@+id/textView65"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="600dp"
-                android:layout_marginBottom="20dp"
-                android:text="판매량 높은 순"
-                android:textSize="18dp"
-                app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
-                app:layout_constraintStart_toStartOf="@+id/tableLayout2"
-                app:layout_constraintTop_toTopOf="@+id/textView66" />
-
-            <TextView
-                android:id="@+id/textView66"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:text="판매량 낮은 순"
-                android:textSize="18dp"
-                app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
-                app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
-                app:layout_constraintStart_toEndOf="@+id/textView65" />
 
             <Button
                 android:id="@+id/button12"
@@ -433,6 +455,31 @@
                 app:layout_constraintBottom_toBottomOf="@+id/button17"
                 app:layout_constraintEnd_toStartOf="@+id/button14"
                 app:layout_constraintTop_toTopOf="@+id/button17" />
+
+            <SearchView
+                android:id="@+id/searchView"
+                android:layout_width="420dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="260dp"
+                android:layout_marginTop="10dp"
+                android:queryHint="이름/거래처 입력"
+                app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView45" />
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="410dp"
+                android:backgroundTint="#FF5555"
+                android:text="검색"
+                android:textColor="#FFFFFF"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/searchView"
+                app:layout_constraintStart_toStartOf="@+id/searchView"
+                app:layout_constraintTop_toTopOf="@+id/searchView" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
