--- a/app/src/main/res/layout/activity_check_menu_page.xml
+++ b/app/src/main/res/layout/activity_check_menu_page.xml
@@ -137,7 +137,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tvcname"
+                android:id="@+id/tvcname2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
